feat: get all theme and create new theme

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
                 <form action="/login" method="post" id="logForm">
                     <div class="mb-3">
                         <label class="form-label">Логин</label>
-                        <input class="form-control" id="email" name="username" aria-describedby="emailHelp" required>
+                        <input class="form-control" id="login" name="login" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Пароль</label>
